--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   text-align: center;
   width: fit-content;
   background-image: url(assets/img/sfondo.png);
+  box-shadow: 20px 20px 50px 15px grey;
 }
 header {
   background-image: linear-gradient(360deg, rgb(2, 101, 126), rgb(85, 189, 218));
@@ -42,6 +43,9 @@ table {
 }
 #lone-anchor {
   color: rgb(85, 189, 218);
+}
+iframe {
+  border-radius: 30px;
 }
 #news {
   background-color: lightgrey;
